Allow data reduction proxy (DRP) warmup URL fetch to use cookies

This allows the sessions setup for fetching the warmup URL to be
reused for fetching the user initiated requests.

Currently, with cookies disabled, the warmup URL is fetched over a
connection that has privacy mode enabled. This prevents the connection
to be reused for fetching the user initiated requests later.

BUG=725119

Review-Url: https://codereview.chromium.org/2897813002
Cr-Commit-Position: refs/heads/master@{#473618}

Former-commit-id: 3374eeb70e0834cffcf3a9723e8a67042ded551b